feat: Carga inmediata del widget de Instagram al cargar la página

--- a/index.html
+++ b/index.html
@@ -283,11 +283,8 @@
             <h2 class="section__title">Síguenos en Instagram</h2>
             <p class="section__subtitle">Mantente al día con nuestros últimos trabajos y novedades</p>
             <div class="instagram__widget">
-                <iframe src="//lightwidget.com/widgets/2cf83807757e53bcb40fa70e3e82f8e3.html" 
-                        class="lightwidget-widget" 
-                        scrolling="no" 
-                        allowtransparency="true">
-                </iframe>
+                <script src="https://static.elfsight.com/platform/platform.js" async></script>
+                <div class="elfsight-app-751e2cea-b0cb-449b-be3e-8f1c1cd38be6"></div>
             </div>
         </div>
     </section>
@@ -335,6 +332,5 @@
 
     <!-- Scripts -->
     <script src="js/main.js" defer></script>
-    <script src="js/instagram-feed.js" defer></script>
 </body>
 </html> 
